--- a/GAS_BOILER_TRANSMITTER/GAS_BOILER_TRANSMITTER/GAS_BOILER_TRANSMITTER/Debug/Makefile
+++ b/GAS_BOILER_TRANSMITTER/GAS_BOILER_TRANSMITTER/GAS_BOILER_TRANSMITTER/Debug/Makefile
@@ -37,6 +37,7 @@ SUBDIRS :=
 
 # Add inputs and outputs from these tool invocations to the build variables 
 C_SRCS +=  \
+../Controller.c \
 ../DS18B20.c \
 ../main.c \
 ../MAX7219.c \
@@ -51,6 +52,7 @@ ASM_SRCS +=
 
 
 OBJS +=  \
+Controller.o \
 DS18B20.o \
 main.o \
 MAX7219.o \
@@ -58,6 +60,7 @@ NRF24.o \
 TWI.o
 
 OBJS_AS_ARGS +=  \
+Controller.o \
 DS18B20.o \
 main.o \
 MAX7219.o \
@@ -65,6 +68,7 @@ NRF24.o \
 TWI.o
 
 C_DEPS +=  \
+Controller.d \
 DS18B20.d \
 main.d \
 MAX7219.d \
@@ -72,6 +76,7 @@ NRF24.d \
 TWI.d
 
 C_DEPS_AS_ARGS +=  \
+Controller.d \
 DS18B20.d \
 main.d \
 MAX7219.d \
@@ -92,6 +97,13 @@ LINKER_SCRIPT_DEP+=
 
 
 # AVR32/GNU C Compiler
+./Controller.o: .././Controller.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)D:\AtmelStudio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"D:\AtmelStudio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega8a -B "D:\AtmelStudio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega8a" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
 ./DS18B20.o: .././DS18B20.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
