--- a/GAS_BOILER_TRANSMITTER/GAS_BOILER_TRANSMITTER/GAS_BOILER_TRANSMITTER/Debug/Makefile
+++ b/GAS_BOILER_TRANSMITTER/GAS_BOILER_TRANSMITTER/GAS_BOILER_TRANSMITTER/Debug/Makefile
@@ -42,7 +42,8 @@ C_SRCS +=  \
 ../main.c \
 ../MAX7219.c \
 ../NRF24.c \
-../TWI.c
+../TWI.c \
+../usart.c
 
 
 PREPROCESSING_SRCS += 
@@ -57,7 +58,8 @@ DS18B20.o \
 main.o \
 MAX7219.o \
 NRF24.o \
-TWI.o
+TWI.o \
+usart.o
 
 OBJS_AS_ARGS +=  \
 Controller.o \
@@ -65,7 +67,8 @@ DS18B20.o \
 main.o \
 MAX7219.o \
 NRF24.o \
-TWI.o
+TWI.o \
+usart.o
 
 C_DEPS +=  \
 Controller.d \
@@ -73,7 +76,8 @@ DS18B20.d \
 main.d \
 MAX7219.d \
 NRF24.d \
-TWI.d
+TWI.d \
+usart.d
 
 C_DEPS_AS_ARGS +=  \
 Controller.d \
@@ -81,7 +85,8 @@ DS18B20.d \
 main.d \
 MAX7219.d \
 NRF24.d \
-TWI.d
+TWI.d \
+usart.d
 
 OUTPUT_FILE_PATH +=GAS_BOILER_TRANSMITTER.elf
 
@@ -133,6 +138,13 @@ LINKER_SCRIPT_DEP+=
 	
 
 ./TWI.o: .././TWI.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)D:\AtmelStudio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"D:\AtmelStudio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega8a -B "D:\AtmelStudio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega8a" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+./usart.o: .././usart.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)D:\AtmelStudio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"D:\AtmelStudio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega8a -B "D:\AtmelStudio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega8a" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
